crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__underscore_backpassing_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# leading comment\n_ <- \\y -> y\n\n4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginBackpassing
            Underscore=>Underscore@0
            InlineBackArrow=>OpBackArrow@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                Ident=>LowerIdent@5
            EndLambda)
        EndBackpassing)
        HintExpr
        Num=>Int@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Backpassing([Underscore("_")], Lambda([Ident("y")], Ident("y")))
IntBase10("4")

[=== formatted below ===]

