crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__value_def_confusion_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a : F\nF : h\nabc\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            TypeName=>UpperIdent@2
        EndTypeOrTypeAlias)
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@3
            InlineTypeColon=>OpColon@4
            Ident=>LowerIdent@5
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("a"), Name("F"))
TypeAlias(UpperIdent("F"), Name("h"))
Ident("abc")

[=== formatted below ===]

