crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__var_else_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "elsewhere\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("elsewhere")

[=== formatted below ===]

