crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__var_if_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "iffy\n"
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Ident("iffy")

[=== formatted below ===]

