crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__var_is_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "isnt\n"
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Ident("isnt")

[=== formatted below ===]

