crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__var_minus_two_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x-2\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Num=>IntBase10@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("x"), Minus, IntBase10("2"))

[=== formatted below ===]

