crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__var_then_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "thenever\n"
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Ident("thenever")

[=== formatted below ===]

